--- a/source/contentful_templates/customer.html.erb
+++ b/source/contentful_templates/customer.html.erb
@@ -78,7 +78,12 @@ end
                 <% end %>
             </div><!-- END columns -->
             <div class="columns small-12 large-6">
-            <% if p["case_study"].has_key?("form_id") %>
+            <% if p["case_study"].has_key?("related_form") %>
+                <div class="callout callout--large drop">
+                    <h3 class="headline-4 text-center group">Read the Case Study</h3>
+                    <%= Kramdown::Document.new(p["case_study"]["related_form"]["custom_form"]).to_html %>
+                </div>
+            <% elsif p["case_study"].has_key?("form_id") %>
                 <div class="callout callout--large drop">
                     <h3 class="headline-4 text-center group">Download this case study for free</h3>
                     <%= partial("partials/snippets/form-hubspot", :locals => { :form_id => p["case_study"]["form_id"] }) %>
