--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -23,14 +23,13 @@ customCSS: "innovation"
         </section>
     </div>
 
-<%= partial "partials/section-promos/aws-mlh-video", 
+<%#= partial "partials/section-promos/aws-mlh-video", 
     :locals => {
         :quote_id => "5fDbO1XJ1CAEWAEIoiO6mS",
         :container_color => "container-gray-10"
         #:background => "https://images.ctfassets.net/189dvqdsjh46/55EpUazd5CQSqC66CaWYqI/fd3aa1534d8d641ee8bd60d3592e98a3/aws-mlh-diagram-k-alpha.png"
     }
 %>
-<%= partial "/partials/section-promos/leadership-gallery" %>
 <%#= partial "/partials/section-promos/report-heart-of-medicine", :locals => { :style => "light", :align => "left" } %>
 <%#= partial "partials/section-promos/report-q317", :locals => { :style => "light", :align => "right" } %>
 
@@ -44,35 +43,37 @@ customCSS: "innovation"
         <%= partial "partials/section-promos/report-promo", :locals => { :p => report } %>
     <% end %>
 
-<section class="container-gray-10 card-featured-section">
-    <div class="row">
-        <div class="columns group text-center">
-            <h3 class="subhead--spaced faded headline-5">Datica Innovation Reports</h3>
-        </div>
-    </div>
-    <div class="row row--card-grid full-width align-center small-up-1 medium-up-2 large-up-3">
-    <% sorted_reports[1...4].each do | id, report | %>
-        <div class="column">
-            <div class="card drop">
-                <% if report.has_key?("bg_image") %>
-                    <a class="container-image-fill card-header-image container-gray-3" href="/innovation/<%= report.slug %>" title="Get your free report" data-interchange="[<%= report.bg_image.url %>?fit=thumb&w=600&h=300&q=45, small], [<%= report.bg_image.url %>?fit=thumb&w=800&h=400, medium]">
-                <% else %>
-                    <a class="card-header-image card-header-image--compact container-gray-3" href="/innovation/<%= report.slug %>" title="Get your free report">
-                <% end %>
-                        <% if report.has_key?("subhead") %><span class="card-header-subhead"><%= report.subhead %></span><% end %>
-                        <h2 class="headline-5 card-header-title ribbon--gray-1"><%= report.title %></h2>
-                        <%= inline_svg("icon-arrow-right-circle-large", class: "icon-size--xlarge card-header-icon svg-color--white") %>
-                    </a>
-                <div class="card-section">
-                    <% if report.has_key?("lead") %>
-                        <%= Kramdown::Document.new(report["lead"]).to_html %>
-                    <% end %>
-                </div>
+    <section class="container-gray-10 card-featured-section">
+        <div class="row">
+            <div class="columns group text-center">
+                <h3 class="subhead--spaced faded headline-5">Datica Innovation Reports</h3>
             </div>
         </div>
-    <% end %>
-    </div>
-</section>
+        <div class="row row--card-grid full-width align-center small-up-1 medium-up-2 large-up-3">
+        <% sorted_reports[1...4].each do | id, report | %>
+            <div class="column">
+                <div class="card drop">
+                    <% if report.has_key?("bg_image") %>
+                        <a class="container-image-fill card-header-image container-gray-3" href="/innovation/<%= report.slug %>" title="Get your free report" data-interchange="[<%= report.bg_image.url %>?fit=thumb&w=600&h=300&q=45, small], [<%= report.bg_image.url %>?fit=thumb&w=800&h=400, medium]">
+                    <% else %>
+                        <a class="card-header-image card-header-image--compact container-gray-3" href="/innovation/<%= report.slug %>" title="Get your free report">
+                    <% end %>
+                            <% if report.has_key?("subhead") %><span class="card-header-subhead"><%= report.subhead %></span><% end %>
+                            <h2 class="headline-5 card-header-title ribbon--gray-1"><%= report.title %></h2>
+                            <%= inline_svg("icon-arrow-right-circle-large", class: "icon-size--xlarge card-header-icon svg-color--white") %>
+                        </a>
+                    <div class="card-section">
+                        <% if report.has_key?("lead") %>
+                            <%= Kramdown::Document.new(report["lead"]).to_html %>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        <% end %>
+        </div>
+    </section>
+    <%= partial "/partials/section-promos/leadership-gallery" %>
+
     <% sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse! %>
     <section data-magellan-target="discoverInnovation" id="discoverInnovation" class="discover--podcast section-article container-color--dark-alt container-image--middle" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg, small]">
         <div class="row align-center collapse">
