GDPR & GxP blocks tweaks; new card partial for Reports and Guides.

--- a/source/partials/section-promos/_aws-mlh-video.erb
+++ b/source/partials/section-promos/_aws-mlh-video.erb
@@ -46,4 +46,7 @@ end
             </div>
         </div>
     </div>
+    <div class="group text-center">
+        <%= partial "partials/snippets/button", :locals => { :label => "Get the Case Study", :url => "/customer/methodist-lebonheur-healthcare", :button_classes => "button", :icon => "icon-download", :icon_color => "white", :icon_align => "right", :data_track_group => "case-study" } %>
+    </div>
 </section>
