--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -73,6 +73,7 @@ section.section-article
 - sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse!
 - sorted_academy = data.site.academy.to_a.sort_by{ |id, academy| academy['pub_date'] }.reverse!
 - sorted_reports = data.site.reports.to_a.sort_by{ |id, report| report['pub_date'] }.reverse!
+- sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse!
 section.container-gray-10.section-article
   h3.headline-3.group.text-center <strong>Recently</strong> at Datica
   .row.full-width.align-center.small-up-1.medium-up-2.large-up-3.xlarge-up-4
@@ -91,7 +92,10 @@ section.container-gray-10.section-article
     /         | to hear the news.
     /     a href="/events/himss-2018" title="Schedule a time to meet at HIMSS 18"
     /       img src="https://images.ctfassets.net/189dvqdsjh46/FPuVgZwr02yGkmCswWegw/216aeb7c46c57801b6de8c06e37e885f/Meet_at_himss_18_widget_art.jpg?w=1000" alt="schedule a time to meet at HIMSS'18"
-    - sorted_posts.take(2).each do | id, blog_entry |
+    - sorted_guides.take(1).each do | id, guide_entry |
+      .column
+        = partial "partials/cards/card-report", :locals => { :post => guide_entry, :style => "dark", :size => "small" }
+    - sorted_posts.take(1).each do | id, blog_entry |
       .column
         = partial "partials/cards/featured-blog", :locals => { :post => blog_entry, :style => "light", :size => "small", :show_type => true }
     - sorted_podcasts.take(1).each do | id, podcast_entry |
@@ -99,17 +103,7 @@ section.container-gray-10.section-article
         = partial "partials/cards/featured-blog", :locals => { :post => podcast_entry, :style => "light", :size => "small", :show_type => true }
     - sorted_reports.take(1).each do | id, report_entry |
       .column
-        .card.container-gray-2
-          .card-section
-            /! <span class="card-header-subhead">Datica</span
-            - if report_entry.has_key?("subhead")
-              .subheader-small.color-white= report_entry.subhead
-            h3.headline-4
-              a.link--white href="/innovation/#{report_entry.slug}" title=("Read report")
-                = report_entry.title
-          - if report_entry.has_key?("image_thumb")
-            a.text-center href="/innovation/#{report_entry.slug}" title=("Read report")
-              img alt="report" data-interchange="[#{report_entry.image_thumb.url}?fit=thumb&w=400&q=50, small], [#{report_entry.image_thumb.url}?fit=thumb&w=600, large]" style="padding: 0 1rem 0 1rem;" /
+        = partial "partials/cards/card-report", :locals => { :post => report_entry, :style => "dark", :size => "small" }
 
 aside#ctaBottom.container-color--dark-grad-blue
   .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
