--- a/source/pricing/old.html.erb
+++ b/source/pricing/old.html.erb
@@ -8,6 +8,7 @@ ogType: "product"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/80SDxxPlIsygQUCWOowSS/cd68f00dc5c3ef7942a24af04b94c9b2/cta-free-trial-mts.jpg"
 customCSS: "pricing"
 layout: "sparse"
+hide_from_sitemap: true
 ---
 <div class="container-color--dark-alt">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
