Basic google search. Dunno

--- a/source/search.html.slim
+++ b/source/search.html.slim
@@ -3,10 +3,8 @@ title: "Search Datica.com"
 summary: "Search the site."
 author: "Datica, Inc."
 tags: "search, tools, HIPAA, HL7, FHIR, interoperability, EHR, integration, resource"
-customCSS: "home"
 layout: "basic"
-priority: "1.0"
-collectionName: "home"
+hide_from_sitemap: true
 ---
 - current_page.data.share_image = image_share_platform
 - current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
