--- a/source/contentful_templates/guide.html.slim
+++ b/source/contentful_templates/guide.html.slim
@@ -46,10 +46,7 @@ section.container-gray-2#top
             = partial "partials/snippets/button", :locals => { :label => "Get your free guide", :url => "#guide-form", :button_classes => "button success hide-for-medium-large", :icon => "icon-download", :icon_color => "black" }
             .headline-5.subhead--spaced.faded.show-for-large Datica Guides
             h1.headline-3.text-strong
-                - if p.has_key?("subhead")
-                    = p.subhead
-                - else
-                    = p.title
+                = p.title
             - if p.has_key?("desc")
                 / .content-dynamic
                 = Kramdown::Document.new(p["desc"]).to_html
@@ -59,6 +56,8 @@ section.container-gray-2#top
 section.section-article--med.container-gray-11
     .row
         .columns.small-12.medium-large-6.xlarge-6.group--2x
+            - if p.has_key?("subhead")
+                h3.headline-5= p.subhead
             - if p.has_key?("guide_text")
                 article.group
                     = Kramdown::Document.new(p["guide_text"]).to_html
