Adding link rel="alternate" with feed URL for sections that have feeds. `feed_url` with a full path - simpler. added blog feed rel to index - easier discovery.

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -8,6 +8,7 @@ customCSS: "home"
 layout: "basic"
 priority: "1.0"
 collectionName: "home"
+feed_url: "https://datica.com/blog/feed.xml"
 ---
 - current_page.data.share_image = image_share_platform
 - current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
