--- a/source/podcast/index.html.erb
+++ b/source/podcast/index.html.erb
@@ -9,6 +9,7 @@ header: "The Healthcare Innovators Podcast"
 subheader: "How does healthcare innovate? Datica explores this topic in a new series of interviews with several of the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
 layout: basic
 customCSS: "podcast"
+feed_url: "https://datica.com/podcast/feed.xml"
 ---
 <div class="container-color--dark-alt container-image--bottom" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/5OUXo4nQ6kaqAsqE8McqIu/fcd84d36da7ad0c4b91ecb9cadb7ce87/art-sound-bars-bg.svg, small]">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
