--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -8,6 +8,7 @@ share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/f
 header: "Media Resources"
 subheader: "Company Info, Press Releases, Coverage"
 layout: company
+feed_url: "https://datica.com/press/feed.xml"
 ---
 
 <section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3zZ0FS37NuWEagqyQuoowQ/700afbf86e486e4d251bf816448719e7/background-press.jpg, small]">
