--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -6,6 +6,7 @@ tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: basic
 customCSS: "blog"
+feed_url: "https://datica.com/blog/feed.xml"
 ---
 <% 
 today = DateTime.now
