--- a/source/seldon/recent-entries.html.erb
+++ b/source/seldon/recent-entries.html.erb
@@ -4,12 +4,18 @@ navTitle: Recent Entries
 summary: "Some recent content for emails and social campaigns. Copy content or take screenshots to create graphics."
 hide_from_sitemap: true
 ---
+<% 
+img_share = "?w=800"
+img_bg = "?fit=thumb&w=1200&h=400"
+img_thumb = "?fit=thumb&w=300&h=300"
+%>
 <div class="container-gray-11">
     <div class="full-width container-color--white drop">
         <ul class="tabs tabs-centered" data-tabs id="recents-tabs">
             <li class="tabs-title is-active"><a href="#panel-blog" aria-selected="true">Blog Posts</a></li>
             <li class="tabs-title"><a data-tabs-target="panel-podcast" href="#panel-podcast">Podcasts</a></li>
             <li class="tabs-title"><a data-tabs-target="panel-reports" href="#panel-reports">Reports</a></li>
+            <li class="tabs-title"><a data-tabs-target="panel-guides" href="#panel-guides">Guides</a></li>
         </ul>
     </div>
     <article class="tabs-content section-article--med" data-tabs-content="recents-tabs">
@@ -20,8 +26,8 @@ hide_from_sitemap: true
                     <div class="callout group callout--large">
                         <p class="blog-date">Blog Generic Share Image</p>
                         <p>
-                            <img src="https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png?w=520" width="310">
-                            <textarea cols="30">https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png?w=520</textarea>
+                            <img src="https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png<%= img_share %>" width="320">
+                            <textarea cols="30">https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png<%= img_share %></textarea>
                         </p>
                     </div>
                     <h2 class="headline-2 text-center group">Blog Post Samples</h2>
@@ -41,23 +47,23 @@ hide_from_sitemap: true
                             <div class="columns small-12 medium-6 large-7">
                                 <div class="group">
                                     <% if post.has_key?("featured_image") %>
-                                        <p class="blog-date">Featured Image</p>
-                                        <img src="<%= post["featured_image"]["url"] %>?fit=thumb&w=640&h=320" alt="Featured Image">
-                                        <textarea><%= h post["featured_image"]["url"] %>?fit=thumb&w=640&h=320</textarea>
+                                        <p class="blog-date">Background Image</p>
+                                        <img src="<%= post["featured_image"]["url"] %><%= img_bg %>" alt="Background Image">
+                                        <textarea><%= h post["featured_image"]["url"] %><%= img_bg %></textarea>
                                     <% end %>
                                 </div>
                                 <div class="group">
                                     <% if post.has_key?("share_image") %>
                                         <p class="blog-date">Share Image</p>
-                                        <img class="" src="<%= post["share_image"]["url"] %>?w=520" width="310" alt="Share Image">
-                                        <textarea cols="30"><%= h post["share_image"]["url"] %>?w=520</textarea>
+                                        <img class="" src="<%= post["share_image"]["url"] %><%= img_share %>" alt="Share Image">
+                                        <textarea cols="30"><%= h post["share_image"]["url"] %><%= img_share %></textarea>
                                     <% end %>
                                 </div>
                                 <div class="group">
                                     <% if post.has_key?("featured_image") %>
                                         <p class="blog-date">Thumbnail Image</p>
-                                        <img class="" src="<%= post["featured_image"]["url"] %>?fit=thumb&w=140&h=140" alt="Thumbnail Image">
-                                        <textarea cols="30"><%= h post["featured_image"]["url"] %>?fit=thumb&w=140&h=140</textarea>
+                                        <img class="" src="<%= post["featured_image"]["url"] %><%= img_thumb %>" alt="Thumbnail Image">
+                                        <textarea cols="30"><%= h post["featured_image"]["url"] %><%= img_thumb %></textarea>
                                     <% end %>
                                 </div>
                             </div>
@@ -75,13 +81,13 @@ hide_from_sitemap: true
                         <div class="callout group callout--large">
                             <p class="blog-date">Podcast Generic Share Image</p>
                             <p>
-                                <img src="https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg?w=520" width="310">
-                                <textarea>https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg?w=520</textarea>
+                                <img src="https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg<%= img_share %>">
+                                <textarea>https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/4e0140e8f981742be948e84cdd687970/podcast-art-share-h.jpg<%= img_share %></textarea>
                             </p>
                             <p class="blog-date">Show Image</p>
                             <p>
-                                <img src="https://images.ctfassets.net/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg?w=240" width="140">
-                                <textarea>https://images.ctfassets.net/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg?w=240</textarea>
+                                <img src="https://images.ctfassets.net/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg<%= img_thumb %>" width="140">
+                                <textarea>https://images.ctfassets.net/189dvqdsjh46/3d9wcnPdhm4mQA4a4Y4WMK/51232bdb711f16512d03b250a9bb422e/HI_Podcast_Poster_2017_No.3__new_look_Q3_-512px.jpg<%= img_thumb %></textarea>
                             </p>
                         </div>
                 </div>
@@ -116,11 +122,11 @@ hide_from_sitemap: true
             </div>
         </section>
         <section class="tabs-panel" id="panel-reports">
-            <h2 class="headline-2 text-center group">Recent Reports</h2>
+            <h2 class="headline-2 text-center group">Reports</h2>
             <div class="row align-center">
                 <div class="columns small-12">
                     <% sorted_reports = data.site.reports.to_a.sort_by{ |id, report| report['pub_date'] }.reverse! %>
-                    <% sorted_reports[0...3].each do | id, report | %>
+                    <% sorted_reports.each do | id, report | %>
                         <div class="callout callout--large drop">
                             <div class="row">
                                 <div class="columns small-12 medium-6 large-5">
@@ -134,18 +140,18 @@ hide_from_sitemap: true
                                 </div>
                                 <div class="columns small-12 medium-6 large-7">
                                     <% if report.has_key?("bg_image") %>
-                                    <p class="blog-date">Featured Image</p>
+                                    <p class="blog-date">Background (Featured) Image</p>
                                         <p>
-                                            <img class="" src="<%= report.bg_image.url %>?fit=thumb&w=640&h=320">
-                                            <textarea><%= h report.bg_image.url %>?fit=thumb&w=640&h=320</textarea>
+                                            <img class="" src="<%= report.bg_image.url %><%= img_bg %>">
+                                            <textarea><%= h report.bg_image.url %><%= img_bg %></textarea>
                                         </p>
                                     <% end %>
 
                                     <% if report.has_key?("share_image") %>
                                         <p class="blog-date">Share Image</p>
                                         <p>
-                                            <img class="" src="<%= report.share_image.url %>?w=520" width="310">
-                                            <textarea><%= h report.share_image.url %>?w=520</textarea>
+                                            <img class="" src="<%= report.share_image.url %><%= img_share %>">
+                                            <textarea><%= h report.share_image.url %><%= img_share %></textarea>
                                         </p>
                                     <% end %>
 
@@ -153,8 +159,57 @@ hide_from_sitemap: true
                                     <% if report.has_key?("image_thumb") %>
                                     <p class="blog-date">Thumbnail Image</p>
                                         <p>
-                                            <img class="" src="<%= report.image_thumb.url %>?w=240">
-                                            <textarea><%= h report.image_thumb.url %>?w=240</textarea>
+                                            <img class="" src="<%= report.image_thumb.url %><%= img_thumb %>">
+                                            <textarea><%= h report.image_thumb.url %><%= img_thumb %></textarea>
+                                        </p>
+                                    <% end %>
+                                </div>
+                            </div>
+                        </div>
+                    <% end %>
+                </div>
+            </div>
+        </section>
+        <section class="tabs-panel" id="panel-guides">
+            <h2 class="headline-2 text-center group">Guides</h2>
+            <div class="row align-center">
+                <div class="columns small-12">
+                    <% sorted_guides = data.site.guides.to_a.sort_by{ |id, guide_entry| guide_entry['title'] } %>
+                    <% sorted_guides.each do | id, guide | %>
+                        <div class="callout callout--large drop">
+                            <div class="row">
+                                <div class="columns small-12 medium-6 large-5">
+                                    <% if guide.has_key?("subhead") %>
+                                        <h4 class="headline-5 spaced-out text-small"><%= guide.subhead %></h4>
+                                    <% end %>
+                                    <h2 class="headline-4"><%= guide.title %></h2>
+                                    <% if guide.has_key?("desc") %>
+                                        <%= Kramdown::Document.new(guide["desc"]).to_html %>
+                                    <% end %>
+                                </div>
+                                <div class="columns small-12 medium-6 large-7">
+                                    <% if guide.has_key?("bg_image") %>
+                                    <p class="blog-date">Background (Featured) Image</p>
+                                        <p>
+                                            <img class="" src="<%= guide.bg_image.url %><%= img_bg %>">
+                                            <textarea><%= h guide.bg_image.url %><%= img_bg %></textarea>
+                                        </p>
+                                    <% end %>
+
+                                    <% if guide.has_key?("share_image") %>
+                                        <p class="blog-date">Share Image</p>
+                                        <p>
+                                            <img class="" src="<%= guide.share_image.url %><%= img_share %>">
+                                            <textarea><%= h guide.share_image.url %><%= img_share %></textarea>
+                                        </p>
+                                    <% end %>
+
+
+                                    <% if guide.has_key?("image_thumb") %>
+                                    <p class="blog-date">Thumbnail Image</p>
+                                        <p>
+                                            <img class="" src="<%= guide.image_thumb.url %><%= img_thumb %>">
+                                            <textarea><%= h guide.image_thumb.url %><%= img_thumb %></textarea>
                                         </p>
                                     <% end %>
                                 </div>
