--- a/source/nav.html.slim
+++ b/source/nav.html.slim
@@ -26,14 +26,23 @@ nav
       ul.dropdown.menu(data-dropdown-menu)
         - data.footer_main[1...4].each do |f|
           - if f.has_key?("children")
-            li.has-submenu = f.title
+            li.has-submenu
+              a = f.title
               ul.submenu.menu.vertical(data-submenu)
                 - f["children"].each do |c|
-                  li
-                    = current_link_to c.title, c.url, title: c.desc, class: ""
-            li
-              ruby:
-                sign_link = data.footer_main[4].children[0]
-              = current_link_to sign_link.title, sign_link.url, title: sign_link.desc, class: ""
+                  ruby:
+                    item_class = (c.has_key?("has_divider") ? 'submenu-divider' : nil)
+                  li(class=item_class)
+                    = current_link_to c.title, c.url, title: c.desc, class: ''
+        li
+          ruby:
+            sign_link = data.footer_main[3].children[0]
+          = current_link_to sign_link.title, sign_link.url, title: sign_link.desc, class: ""
+        li
+          a.button(href="/contact", title="Contact Us") Contact
 
 
+css:
+  .submenu-divider {
+    border-bottom: 1px solid gray;
+  }
